# geometry-of-forgetting

./: .gitignore  LEDGER.md  NOTE_D1_function_space_control.md  NOTE_autonomous_cl.md  NOTE_benign_forgetting.md  NOTE_bregman_generalization.md  NOTE_forgetting_decomposition.md  NOTE_isometry_igfa_hybrid.md  NOTE_jspace_bridge.md  NOTE_memflow_deepnet_negative.md  NOTE_memory_metric_flow.md  NOTE_representation_drift.md  NOTE_scalable_cl.md  NOTE_unlearn_domain_vacuous.md  PREFLIGHT.md  README.md  analyze_forgetting_attribution.py  analyze_interference_opt.py  colab_continual_pretrain_igfa.py  colab_lora_llm_igfa.py  colab_lora_llm_igfa_3approaches.py  colab_split_cifar100_igfa.py  comparison_results.json  demo_interference_controller.py  demo_method_taxonomy.py  demo_process_surrogate.py  evaluate_applications.py  evaluate_autonomous_cl.py  evaluate_autonomous_loop.py  evaluate_benign_forgetting.py  evaluate_beyond_a1.py  evaluate_bregman_identity.py  evaluate_floor_estimation.py  evaluate_forgetting_decomposition.py  evaluate_functional_control.py  evaluate_functional_gate.py  evaluate_hypotheses.py  evaluate_info_floor.py  evaluate_memory_metric_flow.py  evaluate_next_steps.py  (+66 more)
output/: open_question_completion_report.md  open_questions_all_complete_results.json  open_questions_all_complete_summary.txt
